✨ Integración de Expo en el proyecto de cámara
- Se agregó soporte para Expo, incluyendo la configuración de autolink y módulos.
- Actualización de dependencias en package.json y Podfile para incluir Expo SDK 53.0.0.
- Modificaciones en archivos de configuración de Android e iOS para compatibilidad con Expo.
- Actualización del README.md con instrucciones sobre el uso de Expo Go y comandos de desarrollo.
- Se mejoró la estructura del proyecto para facilitar el desarrollo multiplataforma.

--- a/app.json
+++ b/app.json
@@ -1,4 +1,20 @@
 {
+  "expo": {
+    "name": "Camera App",
+    "slug": "react-native-camera-app", 
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "userInterfaceStyle": "light",
+    "platforms": ["ios", "android"],
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.cameraappnew.app"
+    },
+    "android": {
+      "package": "com.cameraappnew"
+    },
+    "scheme": "cameraapp"
+  },
   "name": "CameraAppNew",
-  "displayName": "CameraAppNew"
+  "displayName": "Camera App"
 }
