--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@shopify/react-native-skia": "^2.1.1",
+    "expo": "~53.0.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "expo": "~53.0.0"
+    "react-native-fast-opencv": "^0.4.6",
+    "react-native-vision-camera": "^4.7.1",
+    "react-native-worklets-core": "^1.6.0",
+    "expo-camera": "~16.1.11",
+    "expo-media-library": "~17.1.7",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
